Add loading screen to menu

--- a/css/site.css
+++ b/css/site.css
@@ -370,6 +370,34 @@ html, body {
     }
 }
 
+/* LOADING */
+.loading-screen {
+    visibility: collapse;
+
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loading-screen .spinning {
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    border: solid transparent 4px;
+    border-top: solid black 4px;
+
+    margin-left: 10px;
+}
+
+.loading-screen p {
+    font-size: 150%;
+}
+
 /* OPENING */
 .opening {
     display: grid;
