Create trivia engine

--- a/css/site.css
+++ b/css/site.css
@@ -382,6 +382,8 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
+
+    background-color: var(--crush40-gray)
 }
 
 .loading-screen .spinning {
