--- a/css/home.css
+++ b/css/home.css
@@ -1,7 +1,43 @@
+@font-face {
+    font-family: 'Dimentia';
+    font-weight: 300;
+    src: url('../img/fonts/Dimentia.otf');
+}
+
+@font-face {
+    font-family: 'Dirty Headline';
+    font-weight: 300;
+    src: url('../img/fonts/JunTitle.ttf');
+}
+
+@font-face {
+    font-family: 'Birth of a Hero';
+    font-weight: 400;
+    src: url('../img/fonts/JohnnyTitle.ttf');
+}
+
 /* INTRODUCING... CRUSH 40! */
 .intro {
-    background-color: darkgray;
+    position: relative;
+
+    background-color: var(--crush40-gray);
+    color: white;
     overflow: hidden;
+}
+
+.intro h2 {
+    text-align: center;
+
+    color: red;
+    font-size: 200%;
+    font-family: Dimentia;
+    font-style: italic;
+    font-weight: 300;
+}
+
+.intro h2 img {
+    vertical-align: middle; 
+    width: 180px;
 }
 
 .intro .blockTitle {
@@ -164,12 +200,11 @@
         display: grid;
         align-items: flex-start;
 
-        grid-template-rows: auto auto auto auto auto auto;
+        grid-template-rows: auto auto auto auto auto;
         grid-template-columns: 1fr auto 1fr;
         grid-template-areas:
             "johnnyIndicator gtr junIndicator"
             "johnnyTitle gtr junTitle"
-            "johnnyAka gtr junTitle"
             "johnnyDesc gtr junDesc"
             "johnnyImg gtr junImg"
             "johnnyTogetherImg gtr junMrJun";
@@ -200,16 +235,29 @@
     margin: 0px;
 }
 
-.intro .bandMembers .johnnyAka {
+.intro .bandMembers .johnnyTitle .aka {
     grid-area: johnnyAka;
     margin-bottom: 0px;
 }
 
-.intro .bandMembers .johnnyTitle { grid-area: johnnyTitle; }
+.intro .bandMembers .junTitle { 
+    font-family: 'Dirty Headline'; 
+    font-weight: 300;
+    font-size: 170%;
+    grid-area: junTitle; 
+}
+
+.intro .bandMembers .johnnyTitle .title { 
+    font-family: 'Birth of a Hero';
+    font-weight: 300;
+    font-size: 240%;
+    grid-area: johnnyTitle;
+}
+
 .intro .bandMembers .johnnyDesc { grid-area: johnnyDesc; padding-left: 30px; }
 .intro .bandMembers .johnnyImg { grid-area: johnnyImg; }
 .intro .bandMembers .johnnyIndicator { grid-area: johnnyIndicator; }
-.intro .bandMembers .junTitle { grid-area: junTitle; }
+.intro .bandMembers .johnnyTitle { grid-area: johnnyTitle; }
 .intro .bandMembers .junDesc { grid-area: junDesc; padding-left: 25px; }
 .intro .bandMembers .junImg { grid-area: junImg; }
 .intro .bandMembers .junIndicator { grid-area: junIndicator; }
