--- a/css/site.css
+++ b/css/site.css
@@ -1,14 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-
 /* If you see this, you should REALLY come chat with us over on the Discord server! */
+@font-face {
+    font-family: 'Bahnschrift SemiLight';
+    src: url('../img/fonts/Bahnschrift-SemiLight.ttf')
+}
 
 /* GENERAL: */
 html, body {
-    --crush40-red: rgb(105, 2, 2);
-    --crush40-red-hover: rgb(85, 2, 2);
-    --crush40-blue: darkblue;
+    --crush40-red: rgb(235, 0, 5);
+    --crush40-red-hover: rgb(205, 0, 5);
+    --crush40-blue: rgb(120, 120, 255);
 
-    --crush40-darkred: rgb(65, 2, 2);
+    --crush40-darkred: rgb(195, 0, 5);
     --crush40-lightred-hover: rgb(109, 0, 0);
 
     --crush40-red-pale: rgb(90, 30, 30);
@@ -17,7 +19,7 @@ html, body {
     --crush40-blue-pale-hover: rgb(60, 30, 90);
 
     --crush40-gray: rgb(60, 60, 60);
-    --crush40-darkgray: rgb(0, 0, 0);
+    --crush40-darkgray: rgb(20, 20, 20);
 
     margin: 0;
     position: absolute;
@@ -25,7 +27,7 @@ html, body {
     width: 100%;
     height: 100%;
 
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Bahnschrift SemiLight', sans-serif;
 
     scroll-behavior: smooth;
 }
@@ -180,7 +182,7 @@ html, body {
     grid-area: titlebar;
 
     padding: 0;
-    background-color: var(--crush40-darkgray);
+    background-color: var(--crush40-red);
 
     display: grid;
     grid-template-columns: 1fr auto;
@@ -225,7 +227,7 @@ html, body {
 
 .nav .logo {
     margin: 10px;
-    max-height: 60px;
+    height: 60px;
 }
 
 .nav .items {
@@ -234,7 +236,7 @@ html, body {
     display: flex;
     flex-direction: row;
     list-style-type: none;
-    color: white;
+    color: black;
     
     margin: 0;
     padding: 0;
@@ -413,7 +415,7 @@ html, body {
 }
 
 .opening img {
-    max-width: 90%;
+    max-width: 100%;
 }
 
 .opening-intro
