--- a/menus/css/trivia.css
+++ b/menus/css/trivia.css
@@ -27,8 +27,6 @@
     gap: 10px;
 
     width: 80%;
-
-    visibility: hidden;
 }
 
 @media (min-width: 1100px) {
@@ -119,6 +117,8 @@
 }
 
 .resultsScreen .correctBarFilled {
+    z-index: -1;
+    
     position: absolute;
     left: 0;
     top: 0;
