--- a/css/site.css
+++ b/css/site.css
@@ -156,7 +156,7 @@ html, body {
     position: absolute;
     background-color: var(--crush40-gray);
     width: 100%;
-    height: 100%;
+    height: 400px;
     bottom: 0;
 
     box-shadow: 0 -2px 1px rgba(0, 0, 0, 0.2);
