Improve colour of titlebar text on menu

--- a/css/site.css
+++ b/css/site.css
@@ -183,6 +183,7 @@ html, body {
 
 .floating .panel .titlebar {
     grid-area: titlebar;
+    color: black;
 
     padding: 0;
     background-color: var(--crush40-red);
