--- a/css/site.css
+++ b/css/site.css
@@ -258,6 +258,8 @@ html, body {
     text-align: center;
 
     cursor: pointer;
+
+    position: relative;
 }
 
 .nav .items li:hover .back {
@@ -280,10 +282,16 @@ html, body {
     z-index: -1;
 }
 
-.nav .items li p {
-    position: relative;
+.nav .items li a {
+    text-decoration: none;
+    color: black;
 
-    display: block;
+    margin: 0;
+
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .nav .btn {
