Add album backgrounds

--- a/css/site.css
+++ b/css/site.css
@@ -1,7 +1,7 @@
 /* If you see this, you should REALLY come chat with us over on the Discord server! */
 @font-face {
     font-family: 'Bahnschrift SemiLight';
-    src: url('../img/fonts/Bahnschrift-SemiLight.ttf')
+    src: url('../img/fonts/Bahnschrift-SemiLight.ttf');
 }
 
 /* GENERAL: */
