--- a/css/discography.css
+++ b/css/discography.css
@@ -11,12 +11,22 @@
 
     z-index: -2;
     font-size: 125%;
+
+    /* Bleeds through 2N2R and Live! */
+    background-image: url('../img/visuals/Background/Discography/LiveBackground.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 .albumList .album {
     width: 100%;
     display: grid;
     grid-template-columns: 50% 50%;
+
+    background-attachment: scroll;
+    background-repeat: no-repeat;
+    background-size: cover;
 
     position: relative;
 }
@@ -35,7 +45,7 @@
     padding: 50px;
     box-sizing: border-box;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.4);
 }
 
 .albumList .album .img {
@@ -47,34 +57,59 @@
     justify-self: center;
 }
 
-.albumList .album2000 {
-    background-color: darkblue;
+.albumList .albumThrill {
+    background-image: url('../img/visuals/Background/Discography/SkyBg.jpg');
+    background-color: skyblue;
 }
 
-.albumList .album2009 {
+.albumList .albumC40 {
+    background-image: url('../img/visuals/Background/Discography/Crush40_MotionBlur.png');
     background-color: darkred;
 }
 
-.albumList .riseAgainBackground {
-    background-color: purple;
-    z-index: -1;
+.albumList .albumSSS {
+    background-image: url('../img/visuals/Background/Discography/SSSBackground.png');
+    background-color: lightblue;
+}
 
+.albumList .albumRiseAgain {
+    background-image: url('../img/visuals/Background/Discography/RiseAgain.png');
+    background-size: cover;
+    background-position: right;
+    background-color: orangered;
+    box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.albumList .album2N2R .back {
     position: absolute;
     left: 0;
     top: 0;
-    width: calc(100% + 50px);
+    width: 100%;
     height: 100%;
+    opacity: 0.2;
 
+    background-image: url('../img/visuals/Background/Discography/2N2RBackground.jpg');
+    background-repeat: repeat-x;
+    background-size: contain;
+}
+
+.albumList .album2N2R .text { z-index: 1; }
+.albumList .album2N2R .img { z-index: 1; }
+
+/* Slanted background */
+/*.albumList .album2012 .albumBackground {
+    background-color: purple;
     transform: rotate(6deg);
-    margin-left: -50px;
-    margin-top: -100px;
-    padding: 100px;
-}
 
-.albumList .albumLive {
-    margin-top: 150px;
-}
+    z-index: -1;
+    position: absolute;
+    left: -50px;
+    top: -100px;
+    width: calc(100% + 100px);
+    height: calc(100% + 150px);
+}*/
 
-.albumList .album2019 {
-    background-color: darkgreen;
+.albumList .albumDrivingThroughForever {
+    background-image: url('../img/visuals/Background/Discography/DTF.jpg');
+    background-position: center;
 }
