--- a/css/discography.css
+++ b/css/discography.css
@@ -8,8 +8,6 @@
 
 .albumList {
     width: 100%;
-
-    z-index: -2;
     font-size: 125%;
 
     /* Bleeds through 2N2R and Live! */
@@ -80,21 +78,15 @@
     box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2);
 }
 
-.albumList .album2N2R .back {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    opacity: 0.2;
-
-    background-image: url('../img/visuals/Background/Discography/2N2RBackground.jpg');
+.albumList .album2N2R {
+    background-color: transparent;
+    background-image: url('../img/visuals/Background/Discography/2N2RBackground_Transparent.png');
     background-repeat: repeat-x;
     background-size: contain;
 }
 
-.albumList .album2N2R .text { z-index: 1; }
-.albumList .album2N2R .img { z-index: 1; }
+.albumList .album2N2R .text { z-index: 100; }
+.albumList .album2N2R .img { z-index: 100; }
 
 /* Slanted background */
 /*.albumList .album2012 .albumBackground {
