--- a/css/discography.css
+++ b/css/discography.css
@@ -81,8 +81,8 @@
 .albumList .album2N2R {
     background-color: transparent;
     background-image: url('../img/visuals/Background/Discography/2N2RBackground_Transparent.png');
-    background-repeat: repeat-x;
-    background-size: contain;
+    background-repeat: repeat;
+    background-size: cover;
 }
 
 .albumList .album2N2R .text { z-index: 100; }
