--- a/menus/css/albumView.css
+++ b/menus/css/albumView.css
@@ -2,7 +2,7 @@ body {
     color: black;
 
     display: grid;
-    grid-template-columns: 400px auto;
+    grid-template-columns: 450px auto;
     grid-template-areas: "general pageContents"
 }
 
@@ -10,7 +10,7 @@ body {
     grid-area: general;
 
     position: absolute;
-    width: 400px;
+    width: 450px;
     height: 100%;
 
     background-image: url('../../img/visuals/Background/AlbumView/SSSBackground.png');
@@ -51,6 +51,16 @@ body {
     list-style-type: none;
 }
 
+.albumGeneral .gradient {
+    position: absolute;
+    width: 100px;
+    height: 100%;
+    right: 0;
+
+    grid-area: gradient;
+    background: linear-gradient(to right, transparent, var(--crush40-gray))
+}
+
 .tabs .tab {
     cursor: pointer;
     padding: 20px;
@@ -65,6 +75,8 @@ body {
     background-color: var(--crush40-red-pale);
 }
 
-.albumDetailsPage {
+.albumCurrentTab {
+    grid-area: pageContents;
     width: 100%;
+    height: 100%;
 }
