--- a/menus/css/albumView.css
+++ b/menus/css/albumView.css
@@ -1,4 +1,60 @@
 body {
+    background-color: rgb(40, 40, 40);
+
+    /* Largescreen */
+    display: grid;
+    grid-template-rows: auto 1fr;
+    grid-template-columns: 400px 1fr 400px;
+    grid-template-areas:
+        "stats description physical"
+        "tracks description physical";
+
+    padding-top: 5px;
+    padding-left: 5px;
+    box-sizing: border-box;
+}
+
+.block {
+    background-color: var(--crush40-gray);
+    margin-right: 5px;
+    margin-bottom: 5px;
+
+    padding: 10px;
+}
+
+.stats {
+    grid-area: stats;
+
+    padding-top: 0;
+    margin-top: 0;
+    list-style-type: none;
+    display: flex;
+    justify-content: space-between;
+}
+
+.stats .stat {
+    padding: 0;
+    margin-left: 2px;
+    margin-right: 2px;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    background-color: rgb(20, 20, 20);
+}
+
+.tracks {
+    grid-area: tracks;
+}
+
+.description {
+    grid-area: description;
+}
+
+.physical {
+    grid-area: physical;
+}
+
+/*body {
     color: black;
 
     display: grid;
@@ -79,4 +135,4 @@ body {
     grid-area: pageContents;
     width: 100%;
     height: 100%;
-}
+}*/
