--- a/menus/css/albumView.css
+++ b/menus/css/albumView.css
@@ -1,12 +1,13 @@
 body {
-    background-color: rgb(40, 40, 40);
+    --separator-color: rgb(40, 40, 40);
+    background-color: var(--separator-color);
 
     /* Largescreen */
     display: grid;
     grid-template-rows: auto 1fr;
-    grid-template-columns: 400px 1fr 400px;
+    grid-template-columns: 400px 1fr 1fr;
     grid-template-areas:
-        "stats description physical"
+        "intro description physical"
         "tracks description physical";
 
     padding-top: 5px;
@@ -19,31 +20,56 @@ body {
     margin-right: 5px;
     margin-bottom: 5px;
 
-    padding: 10px;
+    padding: 0;
+}
+
+.intro {
+    padding-left: 5px;
+    padding-right: 5px;
+    grid-area: intro;
+    background-color: var(--separator-color);
+    text-align: center;
 }
 
 .stats {
-    grid-area: stats;
+    width: 100%;
 
+    padding-left: 0;
     padding-top: 0;
     margin-top: 0;
     list-style-type: none;
     display: flex;
-    justify-content: space-between;
+    gap: 5px;
+    justify-content: space-evenly;
 }
 
 .stats .stat {
-    padding: 0;
-    margin-left: 2px;
-    margin-right: 2px;
+    color: black;
+    background-color: var(--crush40-red);
+
+    padding: 5px;
+    padding-top: 10px;
+    margin: 0;
     width: 100%;
     height: 100%;
-    text-align: center;
-    background-color: rgb(20, 20, 20);
+}
+
+.stats .stat .statTitle {
+    margin: 0;
+    text-transform: uppercase;
+}
+
+.stats .stat .statVal {
+    margin: 0;
+    font-size: 200%;
 }
 
 .tracks {
     grid-area: tracks;
+}
+
+.tracks .title {
+    text-align: center;
 }
 
 .description {
