--- a/css/discography.css
+++ b/css/discography.css
@@ -37,6 +37,10 @@
     width: 100%;
     font-size: 125%;
 
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+
     /* Bleeds through 2N2R and Live! */
     background-image: url('../img/visuals/Background/Discography/LiveStuff.png');
     background-size: cover;
